# Mem0

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
db/: mongodb.py
router/: chat.py  chatgpt.py
schema/: chatgpt.py
service/: chatgpt_service.py  mem0.py  mem0_client.py  openai_response.py
