[project]
name = "mem0-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "uvicorn>=0.46.0",
]
